<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DashCam</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="btnMediaGalerij">MediaGalerij</string>
    <string name="btnRoutes">Afgelegde weg</string>
    <string name="btnInstellingen">Instellingen</string>
    <string name="btnAbout">Over</string>
    <string name="title_activity_about">About</string>
    <string name="About">Over</string>
    <string name="lblAbout">Deze app is ontwikkeld door Jan-Lennert Geuns voor de lessen van Mobiele Communicatie.</string>
    <string name="lblDeveloper">Jan-Lennert Geuns, 3ICT1</string>
    <string name="lblEmail"><b><u>Contacteer mij!</u></b></string>
    <string name="lblSite"><b><u>http://geuns.3eeweb.com</u></b></string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_map_show_route">Map</string>
    <string name="title_activity_show_route">Map</string>
    <string name="title_activity_route_details">RouteDetails</string>
    <string name="TitelRoutePicker">Chose your route</string>

</resources>
