<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:text="@string/btnMediaGalerij"
        android:id="@+id/button"
        android:onClick="openMediaGalerij" />

    <Button
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:text="@string/btnRoutes"
        android:id="@+id/button3"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:onClick="goToMap"/>

    <Button
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:text="@string/btnInstellingen"
        android:id="@+id/button4"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:onClick="goToSettings"/>

    <Button
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:text="@string/btnAbout"
        android:id="@+id/button5"
        android:layout_alignTop="@+id/button4"
        android:layout_alignParentEnd="true"
        android:onClick="goToAbout"/>

    <Button
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:text="Camera"
        android:id="@+id/goToCamera"
        android:onClick="goToCamera"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
